T0010C - Added Diagnostics crash-dumps toggle + open dumps folder UX, WER LocalDumps ExpandString folder defaults (mini dumps, count 10), and bounded dump inclusion with registry/debug-bundle tests.

--- a/src/CaseGraph.App/Views/Pages/DiagnosticsView.xaml
+++ b/src/CaseGraph.App/Views/Pages/DiagnosticsView.xaml
@@ -138,20 +138,14 @@
                                Text="{Binding DiagnosticsDumpsDirectory}"
                                TextWrapping="Wrap" />
 
-                    <StackPanel Margin="{StaticResource SpaceTop12}"
-                                Orientation="Horizontal">
-                        <Button Content="Enable Dumps"
-                                Command="{Binding EnableCrashDumpsCommand}"
-                                Style="{StaticResource TopBarButtonStyle}" />
-                        <Button Margin="8,0,0,0"
-                                Content="Disable Dumps"
-                                Command="{Binding DisableCrashDumpsCommand}"
-                                Style="{StaticResource TopBarButtonStyle}" />
-                        <Button Margin="8,0,0,0"
-                                Content="Open Dumps Folder"
-                                Command="{Binding OpenDumpsFolderCommand}"
-                                Style="{StaticResource TopBarButtonStyle}" />
-                    </StackPanel>
+                    <CheckBox Margin="{StaticResource SpaceTop12}"
+                              IsChecked="{Binding DiagnosticsCrashDumpsEnabled, Mode=TwoWay}"
+                              Content="Enable crash dumps (recommended for debugging)" />
+
+                    <Button Margin="{StaticResource SpaceTop12}"
+                            Content="Open Dumps Folder"
+                            Command="{Binding OpenDumpsFolderCommand}"
+                            Style="{StaticResource TopBarButtonStyle}" />
 
                     <TextBlock Margin="{StaticResource SpaceTop12}"
                                Style="{StaticResource SecondaryBodyTextStyle}"
